# Grasp-Anything

./: README.md  pyproject.toml
src/grasp_anything/inference/: grasp_generator.py  grasp_generator_simple.py
src/grasp_anything/inference/models/: ggcnn.py  grconvnet.py  grconvnet3.py  grconvnet4.py
src/grasp_anything/inference/models/ragt/: mobile_vit.py  ragt.py
src/grasp_anything/models/grasp_det_seg/: __init__.py
src/grasp_anything/models/grasp_det_seg/algos/: detection.py  fpn.py  rpn.py  semantic_seg.py
src/grasp_anything/models/grasp_det_seg/data_OCID/: misc.py
src/grasp_anything/models/grasp_det_seg/models/: det_seg.py  resnet.py
src/grasp_anything/models/grasp_det_seg/modules/: losses.py
src/grasp_anything/models/grasp_det_seg/modules/heads/: fpn.py
src/grasp_anything/models/grasp_det_seg/utils/: misc.py
src/grasp_anything/utils/data/: camera_data.py  cornell_data.py  grasp_anything_data.py  jacquard_data.py  ocid_grasp_data.py  vmrd_data.py
src/grasp_anything/utils/dataset_processing/: generate_cornell_depth.py
src/grasp_anything/utils/visualisation/: plot.py
